# NLP-tools

./: LICENSE  pyproject.toml
doc/: conf.py  index.rst
doc/_build/doctrees/: NLP-Tools.doctree  environment.pickle  index.doctree  modules.doctree
doc/_build/html/: .buildinfo  NLP-Tools.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: NLP-Tools.rst.txt  modules.rst.txt
