[project]
name = "NLP-Tools"
version = "0.0.1"
authors = [
  { name="Valentine Fleith", email="" },
]
description = "Some basic tools I use to process textual data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/valentinefleith/NLP-tools"
Issues = "https://github.com/valentinefleith/NLP-tools/issues"
